add jquery.js library and some related examples
	new file:   js/hide.js
	new file:   js/jquery.js

--- a/css/style1.css
+++ b/css/style1.css
@@ -363,3 +363,17 @@ form.zodiac label {
     width: 100px;
     float: left;
 }
+
+div.panel,p.flip
+{
+    margin:0px;
+    padding:5px;
+    text-align:center;
+    background:#e5eecc;
+    border:solid 1px #c3c3c3;
+}
+div.panel
+{
+    /*height:120px;*/
+    /*display:none;*/
+}
