--- a/css/style1.css
+++ b/css/style1.css
@@ -69,7 +69,7 @@ p {
 }
 
 #header {
-    margin: 0px 45px 0px;
+    margin: 0px 5% 0px;
     padding: 3px;
     background: url(../img/pic_header.jpeg) repeat-x center;
     -moz-border-radius: 0.5em 0.5em 0 0;
@@ -77,13 +77,15 @@ p {
 
 #wecando {
     background-color: #e2edff;
-    padding: 0;
 }
 
 #surfing {
+    /*border: 1px solid red;*/
     position: relative;
-    left: 40%;
-    width: 55%;
+    margin: 0px 16%;
+    padding: 0px 0px;
+    /*left: 40%;*/
+    /*width: 55%;*/
 }
 
 #wecando a, #surfing a, #resources a, #songs a, #music a {
@@ -126,13 +128,13 @@ margin: 0px auto;
 
 #timer {
     /*border: 1px solid red;*/	
-    position: absolute;
-    top: 15px;
-    left: 50%;
-    width: 25%;
-    height: 3em;
-    margin: 0;
-    padding: 0px;
+    /*position: absolute;*/
+    /*top: 15px;*/
+    /*left: 50%;*/
+    /*width: 25%;*/
+    /*height: 3em;*/
+    /*margin: 0;*/
+    /*padding: 0px;*/
     font-size: 0.9em;
     color: green;
 }
@@ -142,28 +144,37 @@ margin: 0px auto;
 
 #weather {
     /*border: 1px solid red;*/
-    position: absolute;
-    top: 15px;
-    left: 70%;
+    /*position: absolute;*/
+    /*top: 15px;*/
+    /*left: 70%;*/
     height: 50px;
-    width: 20%;
+    /*width: 20%;*/
 }
 
 #search {	
     /*border: 1px solid red;*/
-    position: absolute;
-    top: 55px;
-    left: 50%;
+    /*position: absolute;*/
+    /*top: 55px;*/
+    /*left: 50%;*/
     /* width: 40%; */
+}
+
+#sidebar {
+    /*border: 1px solid red; */
+    float: right;
+    width: 20%;
+    margin: 2em 5% 0 0;
+    /*padding: 0 0px 20px;*/
+    background-color: #dcdcdc;
 }
 
 #maincontent {
     /*border: 1px solid red; */
-    margin: 0 45px 0;
+    margin: 0 25% 0 5%;
     padding: 0 0px 20px;
     /*background-color: #a2ccff;
      */
-background-color: #f0ffff;
+    background-color: #f0ffff;
 }
 
 #back2top {
@@ -173,10 +184,11 @@ background-color: #f0ffff;
 #bottom {
     /*border: 1px solid red;
      */
-margin: 0px 45px 0px;
+margin: 0px 5% 0px;
 padding: 10px;
 text-align: center;
-background: url(../img/pic_bottom.jpeg) no-repeat bottom center;
+/*background: url(../img/pic_bottom.jpeg) repeat-x bottom;*/
+background-color: #e0fffe;
 -moz-border-radius: 0 0 0.5em 0.5em;
 }
 #bottom p {
