Fix color issue.
Surfing anchor can be seen under not-know-rgba browsers.

--- a/css/style1.css
+++ b/css/style1.css
@@ -276,13 +276,12 @@ background-color: #e0fffe;
 
 }
 .surfing a {
-    color: #ffffff;
     background: skyblue;
-    background-color: rgba(0, 200, 200, 0.6);
+    background-color: rgba(255, 255, 0, 0.6);
     -moz-border-radius: 5px;
 }
 .surfing a:hover {
-    color: yellow;
+    color: red;
 }
 .bubble {
     position:relative;
