--- a/css/style1.css
+++ b/css/style1.css
@@ -99,6 +99,11 @@ p {
     font-size: large;
 }
 
+#wecando a {
+    margin: 0;
+    padding: 0 0.2em 0 0.2em;
+}
+
 #surfing {
     /*border: 1px solid red;*/
     position: relative;
