add a:focus on surfing page

--- a/css/style1.css
+++ b/css/style1.css
@@ -312,6 +312,9 @@ background-color: #e0fffe;
 .surfing a:hover {
     color: yellow;
 }
+.surfing a:focus {
+    color: yellow;
+}
 
 .bubble {
     position:relative;
