add ascii smileys tables; font-family change
* Add a page about various ASCII smileys.

* The default font-family is changed. Now the default font is
Cantarell as with fedoraproject.org. Let's see how good it is.

* It should be noted that the link to wind.html is now under
resources.html rather than utils.html.

--- a/css/style1.css
+++ b/css/style1.css
@@ -16,7 +16,12 @@ apply to the top, right, bottom, and left, respectively.
 
 body {
     margin: 0px;
-    font-family: Verdana, Helvetica, Arial, sans-serif;
+    /* originally from the text book I think*/
+    /*font-family: Verdana, Helvetica, Arial, sans-serif;*/
+    /* css websafe fonts from w3.org */
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    /* from fedoraproject.org */
+    font-family: Cantarell,"Droid Sans",Verdana,sans-serif;
     background-color: #e2edff;	/*这个16进制数表示淡蓝色*/
     line-height: 125%;
     padding: 0;
@@ -432,4 +437,8 @@ div.panel
 
 ol.cjk {
     list-style-type: cjk-ideographic;
+}
+
+.ascii {
+    font-size: larger;
 }
