--- a/css/style1.css
+++ b/css/style1.css
@@ -1,4 +1,4 @@
-/* 
+/*
 在css中我们这样注释
 
 The 'padding' property is a shorthand property for setting 'padding-top',
@@ -86,7 +86,8 @@ p {
     margin: 0px 5% 0px;
     padding: 3px;
     background: url(../img/pic_header.jpeg) repeat-x center;
-    -moz-border-radius: 0.5em 0.5em 0 0;
+    /* CSS3 border-radius */
+    border-radius: 0.5em 0.5em 0 0;
 }
 
 #wecando {
@@ -110,7 +111,7 @@ p {
 #wecando a {
     margin: 0;
     padding: 0.3em 0.2em 0.5em 0.2em;
-    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #surfing {
@@ -201,7 +202,8 @@ margin: 0px auto;
     padding: 0em 0 1em 0em;
     /*background-color: #dcdcdc;*/
     /*background-color: rgba(220, 220, 220, 0.3);*/
-    background:-moz-linear-gradient(left, #f0ffff, #e2edff); /* ff 3.6+ */
+    background: -moz-linear-gradient(left, #f0ffff, #e2edff); /* ff 3.6+ */
+    background: -webkit-linear-gradient(left, #f0ffff, #e2edff);
 }
 
 #maincontent {
@@ -230,7 +232,7 @@ padding: 10px;
 text-align: center;
 /*background: url(../img/pic_bottom.jpeg) repeat-x bottom;*/
 background-color: #e0fffe;
--moz-border-radius: 0 0 0.5em 0.5em;
+border-radius: 0 0 0.5em 0.5em;
 }
 #bottom p {
     margin: 1px;
@@ -320,7 +322,7 @@ background-color: #e0fffe;
 .surfing a {
     background: #00c8c8;
     /*background-color: rgba(255, 255, 0, 0.6);*/
-    -moz-border-radius: 5px;
+    border-radius: 5px;
     color: white;
     padding: 0 0.15em;
 }
@@ -341,8 +343,6 @@ background-color: #e0fffe;
     background:#075698;
 
     border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
 
     background: -webkit-gradient(linear, left top, left bottom, from(#f9d835), to(#f3961c));
     background:-moz-linear-gradient(top, #f9d835, #f3961c);
@@ -453,7 +453,10 @@ ol.cjk {
 }
 
 .latex {
-    font-family: "Computer Modern", "Latin Modern Roman", Times, "Times New Roman", serif;
+    /*font-family: "Computer Modern", "Latin Modern Roman", Times, "Times New Roman", serif;*/
+    /* It is stange that Chrome doesn't display "Computer Modern". */
+    /* It just show wide blank spaces. */
+    font-family: Times, serif;
     letter-spacing: 1px;
 }
 .latex sup {
