--- a/css/style1.css
+++ b/css/style1.css
@@ -91,7 +91,7 @@ p {
 }
 
 #wecando {
-    margin: 0;
+    margin: 0 5%;
     padding: 0.3em 0 0.5em 0;
     background-color: #e2edff;
     height: 1.2em;
@@ -118,7 +118,7 @@ p {
     /*border: 1px solid red;*/
     position: relative;
     margin: 0 10% 0 20%;
-    padding: 20px 0px 0px;
+    padding: 20px 0px 20px 0px;
     /*left: 40%;*/
     /*width: 55%;*/
 }
@@ -194,25 +194,30 @@ margin: 0px auto;
     /* width: 40%; */
 }
 
+#maincontainer {
+    background-color: #f0ffff;
+    margin: 0 5% 0 5%;
+    padding: 0;
+}
+
 #sidebar {
-    /*border: 1px solid red; */
+    /*border: 1px dashed red;*/
     float: right;
-    width: 20%;
-    margin: 2em 5% 0 0;
-    padding: 0em 0 1em 0em;
+    width: 19%;
+    margin: 0 0 0 auto;
+    padding: 0;
     /*background-color: #dcdcdc;*/
     /*background-color: rgba(220, 220, 220, 0.3);*/
-    background: -moz-linear-gradient(left, #f0ffff, #e2edff); /* ff 3.6+ */
-    background: -webkit-linear-gradient(left, #f0ffff, #e2edff);
+    /*background: -moz-linear-gradient(left, #f0ffff, #e2edff); [> ff 3.6+ <]*/
+    /*background: -webkit-linear-gradient(left, #f0ffff, #e2edff);*/
 }
 
 #maincontent {
     /*border: 1px solid red; */
-    margin: 0 25% 0 5%;
-    padding: 0 0px 20px;
-    /*background-color: #a2ccff;
-     */
-    background-color: #f0ffff;
+    /*margin: 0 25% 0 5%;*/
+    margin: 0;
+    padding: 0;
+    width: 80%;
 }
 
 #content-area {
