--- a/css/style1.css
+++ b/css/style1.css
@@ -203,7 +203,7 @@ p {
 #sidebar {
     /*border: 1px dashed red;*/
     float: right;
-    width: 19%;
+    width: 22%;
     margin: 0 0 0 auto;
     padding: 0;
     /*background-color: #dcdcdc;*/
@@ -216,8 +216,8 @@ p {
     /*border: 1px solid red; */
     /*margin: 0 25% 0 5%;*/
     margin: 0;
-    padding: 0;
-    width: 80%;
+    padding: 0 0 0 1em;
+    width: 75%;
 }
 
 #content-area {
