css: form input color reset

--- a/css/style1.css
+++ b/css/style1.css
@@ -408,7 +408,7 @@ form.login label {
 
 form input {
     /*background: gray;*/
-    color: blue;
+    /*color: blue;*/
     padding: 1px;
     /*border-width: 1px;*/
     /*border-style: solid ;*/
