--- a/css/table.css
+++ b/css/table.css
@@ -2,6 +2,34 @@
  * SEE ALSO http://en.wikipedia.org/wiki/Lavender_%28color%29
  */
 
+table {
+    border: 1px solid green;
+    border-collapse: separate;
+    border-width: 1px 1px 1px 0;
+    border-radius: 4px;
+}
+table td {
+    border: 1px solid green;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    padding: 2px;
+}
+table tbody:first-child tr:first-child td:first-child {
+    border-top-left-radius: 4px;
+}
+table tbody:first-child tr:first-child td:last-child {
+    border-top-right-radius: 4px;
+}
+table tbody:last-child tr:last-child td:first-child {
+    border-bottom-left-radius: 4px;
+}
+table tbody:last-child tr:last-child td:last-child {
+    border-bottom-right-radius: 4px;
+}
+table tbody:first-child tr:first-child td {
+    border-top: 0;
+}
+
 .tr-even {
     /* lavender floral */
     /*background-color: #B57EDC;*/
@@ -23,21 +51,10 @@
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    border-collapse: collapse;
-}
-.smileys table td {
-    border: 1px solid green;
 }
 
-.acronyms td {
-    padding: 2px;
-}
 .acronyms table {
     margin-left: auto;
     margin-right: auto;
     width: 60%;
-    border-collapse: collapse;
-}
-.acronyms table td {
-    border: 1px solid green;
 }
